--- a/portfolio-victor-santiago/src/App.css
+++ b/portfolio-victor-santiago/src/App.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background: linear-gradient(90deg, #403B4A 0%, #7f5af0 120%);
+  background: linear-gradient(90deg, #393E6F 0%, #7f5af0 120%);
 }
 
 a {
@@ -26,16 +26,22 @@ a {
 .headerClass {
   background: rgb(26, 28, 43);
 	width: 100%;
-	height: 40px;
+	height: 45px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
   gap: 5px;
   border: 1px solid #fffffe;
   border-radius: 3px;
 }
 
+.divSocial a {
+  margin: 10px;
+  font-size: 25px;
+}
+
 .btn {
-  margin-top: 10px;
+  margin-bottom: 1px;
   margin-left: 35px;
   background-color: transparent;
   font-family: 'Rajdhani', sans-serif;
@@ -152,12 +158,39 @@ section img {
   list-style: none;
 }
 
-.divProjects a {
-  align-self: flex-start;
-}
-
 .backIcon {
-  font-size: 2em;
+  font-size: 60px;
   align-self: flex-start;
   margin-top: 5px;
+}
+
+.backIconContact {
+  margin-top: 5px;
+  font-size: 60px;
+  display: flex;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inpt1 input {
+  width: 300px;
+  height: 30px;
+}
+
+.inpt1 textarea {
+  width: 300px;
+  height: 300px;
+}
+
+.divSocialContact a {
+  font-size: 50px;
+  margin: 10px;
+}
+
+.contact-form h2 {
+  margin-top: 70px;
 }
