--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 body {
-	background: linear-gradient(-45deg, #16161a, #7f5af0, #2cb67d, #72757e);
+	background: linear-gradient(-45deg, #FF4C29, #D5ECC2, #542E71);
 	background-size: 400% 400%;
 	animation: gradient 12s ease infinite;
 	height: 100vh;
@@ -40,7 +40,7 @@ a {
 }
 
 .headerClass {
-  background: rgb(26, 28, 43);
+  background: #FF4C29;
 	width: 100%;
 	height: 45px;
   display: flex;
@@ -113,7 +113,7 @@ main {
 }
 
 .spanName {
-  color:#f5d000;
+  color:#FF4C29;
 }
 
 .imgPerfil:hover {
@@ -196,11 +196,13 @@ section img {
 .inpt1 input {
   width: 300px;
   height: 30px;
+  color:rgb(26, 28, 43);
 }
 
 .inpt1 textarea {
   width: 300px;
   height: 300px;
+  color:rgb(26, 28, 43);
 }
 
 .divSocialContact a {
