--- a/src/App.css
+++ b/src/App.css
@@ -349,3 +349,139 @@ section img {
     font-size: 50%;
   }
 }
+
+@media screen and (max-width: 1400px) {
+  .headerClass {
+    background: #FF4C29;
+    width: 99.5%;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    border: 1px solid #fffffe;
+    border-radius: 3px;
+  }
+
+  .headerBtns {
+    display: flex;
+  }
+
+  .btn {
+    margin-bottom: 1px;
+    margin-left: 35px;
+    background-color: transparent;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 85%;
+    border: 2px solid white;
+    width: 70%;
+    color: #fffffe;
+    transition: 0.5s;
+    border-radius: 0.5em;
+  }
+  
+  .btn:hover {
+    background-color: #f5d000;
+    transform:scale(150%);
+    color:rgb(26, 28, 43)
+  }
+
+  body {
+    background: linear-gradient(-85deg, #082032, #2C394B, #334756, #FF4C29) no-repeat;
+    background-size: 120% 120%;
+    animation: gradient 7s ease infinite;
+    height: 100%;
+  }
+
+  .imgPerfil {
+    border-radius: 50%;
+    transition: 0.5s;
+    border: 2px solid;
+    border-color: white;
+    width: 80%;
+    height: 80%;
+  }
+
+  .imgPerfil:hover {
+    transform: scale(100%);
+    border-radius: 10px;
+  }
+
+  .main-class {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .title-content {
+    font-family: 'Noto Sans JP', sans-serif;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0;
+  }
+  
+  .title-content h1 {
+    margin-bottom: 40px;
+    width: 100%;
+    margin: 0;
+  }
+  
+  .title-content p {
+    font-size: 15px;
+  }
+  
+  .title-content h2 {
+    margin-top:30px;
+  }
+  
+  .title {
+    animation: typing 2s steps(22, end);
+    animation-delay: 0.2s;
+    width: 16ch;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 1rem;
+  }
+
+  .linkProjects {
+    font-size: 120%;
+    margin-bottom: 50px;
+  }
+
+  .project-column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .divProjects {
+    font-size: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-image: url('./images/rocket.svg');
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: 120px 20px;
+  }
+  
+  .divProjects ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+    padding: 110px 20px;
+  }
+
+  .divProjects li {
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    margin: 0;
+  }
+
+  .divProjects a {
+    text-decoration: none;
+    color: white;
+    font-size: 50%;
+  }
+}
